DABOM-274 fix : 로직 주석 & unknown 상수화